[metadata]
name = qsorta
version = 1.0.0
author = Deepak Pandey
description = Quantum-Inspired Multi-Motion Object Tracker (QSort-A)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = tracking, object-tracking, yolo, vision, quantum, sort, qsort
url = https://github.com/YOUR_USERNAME/YOUR_REPO
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
